# deep_learning_examples

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt
notebooks/: README.md  autoencoder_mnist.ipynb  hello_torch.ipynb
src/: autoencoder.py  autoencoder_mnist.py  evaluating.py  training.py
src/celeba_autoencoder/: autoencoder.py  load.py  train.py
src/datasets/: README.md  celeba.py  mnist.py
src/examples/: celeba_autoencoder.py  mnist_autoencoder.py  mnist_autoencoder_cross_validation.py  mnist_classifier.py  mnist_conv_autoencoder.py  mnist_pca.py  mnist_vae.py
src/experiments/: celeba_autoencoder.py  mnist_autoencoder.py
src/mnist/: load.py
src/mnist_autoencoder/: autoencoder.py  config.py  load.py  train.py
src/model_selection/: configuration_space.py  cross_validation.py  networks.py
src/neural_networks/: evaluating.py  symmetric_autoencoder.py  training.py  variational_autoencoder.py
src/utils/: assert_shape.py  cuda.py  seeds.py
tests/: test_autoencoder.py  test_networks.py
