[tool.poetry]
name = "pytorch_examples"  # The project name
version = "0.1.0"  # The project version
description = "NN examples using Pytorch"  # A brief description of the project
authors = ["Your Name <your.email@example.com>"]  # The author's name and contact information
license = "MIT"  # The project's license
readme = "README.md"  # The path to the README file
packages = [{ include = "*", from = "src" }]


[tool.poetry.dependencies]
python = "^3.12"  # The required Python version
torch = "^2.3.0"  # The required version of PyTorch
torchvision = "^0.18.0"  # The required version of Torchvision
matplotlib = "^3.9.0"  # The required version of Matplotlib
numpy = "^2.0.0"  # The required version of NumPy
torchinfo = "^1.8.0"
gdown = "^5.2.0"
scikit-learn = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"  # The required version of Pytest for development

[tool.poetry.source]
name = "src"
path = "src"

[build-system]
requires = ["poetry-core>=1.0.0"]  # The build system requirements
build-backend = "poetry.core.masonry.api"  # The build backend to use

[tool.pytest.ini_options]
testpaths = ["tests"]  # The path to the test files