[tool.poetry]
name = "pytorch_examples"
version = "0.1.0"
description = "NN examples using Pytorch"
authors = ["Matt Faulkner mnfaulk@gmail.com"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "*", from = "src" },
    { include = "mypackage/py.typed" }
]


[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.0"
torchvision = "^0.18.0"
matplotlib = "^3.9.0"
numpy = "^2.0.0"
torchinfo = "^1.8.0"
gdown = "^5.2.0"
scikit-learn = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]  # The path to the test files

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true