[tool.poetry]
name = "deep-learning-examples"
version = "0.1.0"
description = "Deep Learning Examples with PyTorch"
authors = ["Matt Faulkner <mnfaulk@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
gdown = "^5.2.0"
numpy = "^2.0.0"
python = "^3.12"
torch = "^2.4.0"
torchinfo = "^1.8.0"
torchvision = "^0.19.0"
scikit-learn = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mypy = "^1.11.1"
pytest-mypy = "^0.10.3"
jupyter = "^1.0.0"
ruff = "^0.6.0"
coverage = "^7.6.1"
pytest-cov = "^5.0.0"
matplotlib = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

